--- a/Data/Data.csproj
+++ b/Data/Data.csproj
@@ -72,6 +72,7 @@
     <Compile Include="Formation.cs">
       <DependentUpon>DbModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="FormationAvecAvisDto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
